--- a/style.css
+++ b/style.css
@@ -29,3 +29,24 @@ input[type="text"]
 h1.contact-header{
   margin-top: 40px;
 }
+
+button#top {
+    position: fixed;
+    bottom: 0px;
+    right: 0px; 
+    border: solid red;
+    display: none; /* Hidden by default */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: red; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; 
+    float: right/* Rounded corners */
+}
+
+button#top:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+}
